refactor: improve MondooOperatorConfig quality and documentation
- Address code quality issues and extract clone() helper
- Make noProxy matching case-insensitive
- Add logging for imagePullSecret lookup failures
- Default createConfig to true in Helm values
- Remove deprecated marker from imageRegistry field
- Add tests for KeychainFromSecrets and applyImageRegistry
- Add operator config documentation

--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -31,6 +31,24 @@ spec:
               fieldPath: metadata.namespace
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ quote .Values.kubernetesClusterDomain }}
+        {{- if .Values.operator.httpProxy }}
+        - name: HTTP_PROXY
+          value: {{ .Values.operator.httpProxy | quote }}
+        - name: http_proxy
+          value: {{ .Values.operator.httpProxy | quote }}
+        {{- end }}
+        {{- if .Values.operator.httpsProxy }}
+        - name: HTTPS_PROXY
+          value: {{ .Values.operator.httpsProxy | quote }}
+        - name: https_proxy
+          value: {{ .Values.operator.httpsProxy | quote }}
+        {{- end }}
+        {{- if .Values.operator.noProxy }}
+        - name: NO_PROXY
+          value: {{ .Values.operator.noProxy | quote }}
+        - name: no_proxy
+          value: {{ .Values.operator.noProxy | quote }}
+        {{- end }}
         image: {{ .Values.controllerManager.manager.image.repository }}:{{ .Values.controllerManager.manager.image.tag
           | default .Chart.AppVersion }}
         imagePullPolicy: {{ .Values.controllerManager.manager.imagePullPolicy }}
